[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/scene_selector.gd" type="Script" id=1]
[ext_resource path="res://scenes/close_menu.tscn" type="PackedScene" id=2]

[node name="scene_selector" type="Node2D" index="0"]

position = Vector2( 32.6489, -81.6224 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="title_screen" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 427.0
margin_top = 293.0
margin_right = 512.0
margin_bottom = 313.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "title screen"
flat = false
align = 1

[node name="overworld" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 427.0
margin_top = 318.0
margin_right = 502.0
margin_bottom = 338.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "overworld"
flat = false
align = 1

[node name="cabin0" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 427.0
margin_top = 343.0
margin_right = 481.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "cabin0"
flat = false
align = 1

[node name="sewer" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 427.0
margin_top = 368.0
margin_right = 477.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "sewer"
flat = false
align = 1

[node name="close_menu" parent="." index="4" instance=ExtResource( 2 )]

margin_left = 427.0
margin_top = 393.0
margin_right = 552.0
margin_bottom = 443.0

[connection signal="pressed" from="title_screen" to="." method="_on_title_screen_pressed"]

[connection signal="pressed" from="overworld" to="." method="_on_overworld_pressed"]

[connection signal="pressed" from="cabin0" to="." method="_on_cabin0_pressed"]

[connection signal="pressed" from="sewer" to="." method="_on_sewer_pressed"]


